# ros2_lab3

./: README.md  trsa_tb3_cone.world
bt/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
install/: local_setup.sh  setup.sh
install/goals_and_navigation/lib/goals_and_navigation/: detection
install/goals_and_navigation/share/goals_and_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lab3_pkg/include/lab3_pkg/: DetectCone.hpp  DetectConeOld.hpp
install/lab3_pkg/share/lab3_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lab3_pkg/share/lab3_pkg/cmake/: lab3_pkgConfig.cmake
install/sam_bot_description/share/sam_bot_description/: package.sh
install/sam_bot_description/share/sam_bot_description/launch/: autonomous_navigation_launch.py
install/sam_bot_description/share/sam_bot_description/rviz/: urdf_config.rviz
install/sam_bot_description/share/sam_bot_description/src/: object_detection.py
install/sam_bot_description/share/sam_bot_description/src/description/: sam_bot_description.urdf
log/: latest_build
map/: two_rooms_map.pgm  two_rooms_map.yaml
src/goals_and_navigation/: setup.cfg  setup.py
src/goals_and_navigation/goals_and_navigation/: cone_detection.py
src/lab3_pkg/: CMakeLists.txt  cmake2.txt  package.xml
src/lab3_pkg/config/: my_config.yaml
src/lab3_pkg/src/: DetectCone.cpp  DetectConeOld.cpp
src/sam_bot_description/config/: nav2_params copy.yaml  nav2_params.yaml
src/sam_bot_description/launch/: display.launch.py
src/sam_bot_description/world/: trsa_two_rooms.world
